--- a/templates/instance_monitoring.html
+++ b/templates/instance_monitoring.html
@@ -11,7 +11,33 @@ New S3 bucket
 {% endblock %}
 
 {% block content %}
-{% for metric in metrics %}
-{{metric}}
-{% endfor %}
+
+<br>
+<div class="container-fluid">
+  <div class="alert alert-primary" role="alert">
+<h5>Top 1000 logs</h5>
+</div>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">logStreamName</th>
+      <th scope="col">timestamp</th>
+      <th scope="col">message</th>
+      <th scope="col">eventId</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for log in logs %}
+    <tr>
+      <th scope="row">{{ loop.index }}</th>
+      <td>{{log.logStreamName}}</td>
+      <td>{{log.timestamp}}</td>
+      <td>{{log.message}}</td>
+      <td>{{log.eventId}}</td>
+    </tr>
+  {% endfor %}
+  </tbody>
+</table>
+</div>
 {% endblock %}
